Completed DX602 HW8

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2076,21 +2076,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p11(data_location):\n",
-    "    df = pd.read_csv(data_location, sep=None, engine=\"python\")  # auto-detect separator\n",
-    "    # Filter rows where element is TMAX and value >= 30\n",
-    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]                         # Filter rows"
+    "    df = pd.read_csv(data_location, sep=\"\\t\")  # TSV file\n",
+    "    return df[(df.element == \"TMAX\") & (df.value >= 30)]                      # Filter rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2256,7 +2255,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,28 +2684,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p15(df):\n",
-    "    return df.memory_usage(index=False, deep=True).sum() / len(df)"
+    "    total_bytes = df.memory_usage(deep=True).sum()\n",
+    "    num_rows = len(df)\n",
+    "    return total_bytes / num_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(114.0)"
+       "np.float64(114.03160162796266)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
