--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2076,20 +2076,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p11(data_location):\n",
-    "    df = pd.read_csv(data_location, sep=\"\\t\")  # TSV file\n",
-    "    return df[(df.element == \"TMAX\") & (df.value >= 30)]                      # Filter rows"
+    "    df = pd.read_csv(data_location, sep=\"\\t\")\n",
+    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
