Completed DX602 HW8_2

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2084,12 +2084,12 @@
     "\n",
     "def p11(data_location):\n",
     "    df = pd.read_csv(data_location, sep=\"\\t\")\n",
-    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]"
+    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"tmax\"] >= 30)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
