--- a/homework.ipynb
+++ b/homework.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[4177 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "[4177 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "[1307 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "3542          0.0900        0.1205      8  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
        "3542          0.0900        0.1205      8  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        " [1528 rows x 9 columns])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
        "[1342 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
        "[418 rows x 9 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1716,7 @@
        "4          paris   france"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1807,7 @@
        "paris           france"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
        "[4177 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2084,12 +2084,12 @@
     "\n",
     "def p11(data_location):\n",
     "    df = pd.read_csv(data_location, sep=\"\\t\")\n",
-    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"tmax\"] >= 30)]"
+    "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2698,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2999,7 +2999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3214,7 +3214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3288,7 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3303,7 +3303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3460,7 +3460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3692,7 +3692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3939,7 +3939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
