Completed DX602 HW8_4

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,20 +2076,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
-    "\n",
+    " # Read the data using the tab separator (sep='\\t')\n",
     "def p11(data_location):\n",
     "    df = pd.read_csv(data_location, sep=\"\\t\")\n",
+    "    \n",
+    "    # CRITICAL STEP: Convert the 'value' column to numeric to allow reliable comparison.\n",
+    "    # errors='coerce' turns non-numeric values into NaN, though they should be numbers here.\n",
+    "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
+    "    \n",
+    "    # Apply the combined boolean mask: TMAX element AND value >= 30\n",
     "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2261,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
