Completed DX602 HW8_5

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,13 +2089,17 @@
     "    # errors='coerce' turns non-numeric values into NaN, though they should be numbers here.\n",
     "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
     "    \n",
+    "    # NEW STEP: Strip any leading/trailing whitespace from the 'element' column.\n",
+    "    # This ensures \" TMAX \" or \"TMAX\\n\" are correctly matched to \"TMAX\".\n",
+    "    df['element'] = df['element'].astype(str).str.strip()\n",
+    "    \n",
     "    # Apply the combined boolean mask: TMAX element AND value >= 30\n",
     "    return df[(df[\"element\"] == \"TMAX\") & (df[\"value\"] >= 30)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2261,7 +2265,7 @@
        "[9581 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
